src/test/deca/codegen/invalid/SansObjet/ArithmeticFloatOverflow-Sub.deca
// Description:
//    Overflow for a float arithmetic substraction
//
// Results:
//     ERROR: float_arithmetic_overflow
//
// History:
//    created on 13/01/2022

{
    float x = 0x1.00001920928955078125p-127;
    print( x - x);
}
